---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 28 January 2022
  Bugfixes:
    - Fixed crash when quick-toggling into a spidertron type that no longer exists (due to mods being changed or unloaded)
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 21 January 2022
  Features:
    - Spidertron pathfinder now navigates around Space Exploration's empty space
    - Improved pathfinder reliability to reduce incorrect no-paths
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 31 December 2021
  Features:
    - Added option to increase spidertron's size (disabled by default)
  Locale:
    - Added some German translations (thanks Linebeck on Crowdin!)
  Bugfixes:
    - Fixed incorrect lighting in Spidertron Patrol's spiderling
    - Fixed cursor not being cleared when using the remote pipette whilst holding a library blueprint
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 14 September 2021
  Features:
    - 'Shift + Q' (Spidertron remote pipette) can optionally create a temporary remote instead of picking one from the player's inventory (disabled by default)
    - Added setting that configures which vehicles a spidertron can enter: None, Trains only, All except spidertrons (default), All
  Locale:
    - Added some Brazilian Portuguese translations (thanks Bruno Melo on Crowdin!)
  Bugfixes:
    - Fixed possible crash when playing with Space Exploration and pressing 'U' whilst Navigation Satellite Uplink is open
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 4 July 2021
  Compatibility:
    - Allow Alt + Click pathfinder mode to work with spidertron remotes from other mods (e.g. Spidertron control center)