@@ -63,6 +63,8 @@ spidertron-enhancements-connected-remote-not-found=No connected remote found
 spidertron-enhancements-entity-not-spidertron=Entity is not a spidertron
 spidertron-enhancements-no-last-spidertron=Last used spidertron not found
 
+spidertron-enhancements-player-contains-spidertron=Player already contains a spidertron
+
 [tips-and-tricks-item-name]
 spidertron-enhancements=Spidertron Enhancements
 spidertron-enhancements-enter-train=Enter vehicles from spidertron
